--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -13,7 +13,7 @@
 <body>
     
     <div id="navbar"></div>
-    <script src="/scripts/navbar.js"></script>
+    <!-- <script src="/scripts/navbar.js"></script> -->
 
 
 
