added db queries

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -2,7 +2,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <style>
+      .navbar-light .navbar-nav .nav-link {
+        
+    color: rgba(0, 0, 0);
+}
+    </style>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" style="margin-right: -5px; margin-left: 0px; padding-right: 0px;padding-top: 10.5px; font-size: 18px; color: rgb(0, 0, 0);" href="/">Hello Sergonne Lou/</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,27 +26,31 @@
                   </div>
             </li>
 
-
-<!-- spacer -->
-
-
-            <li class="nav-item" style="  list-style-type:none;
+            <li class="nav-item" style="
+            list-style-type:none;
             display:flex;
-            justify-content: center;">
-              <a class="nav-link" href="/students">students</a>
+            justify-content: center;
+            font-size: 16px;
+            "
+            >
+              <a class="nav-link" href="./all_students.html">students</a>
             </li>
 
 
             <li class="nav-item" style="  list-style-type:none;
+            list-style-type:none;
             display:flex;
-            justify-content: center;">
+            justify-content: center;
+            font-size: 16px;">
               <a class="nav-link" href="/free-hours">free hours</a>
             </li>
 
 
             <li class="nav-item" style="  list-style-type:none;
+            list-style-type:none;
             display:flex;
-            justify-content: center;">
+            justify-content: center;
+            font-size: 16px;">
               <a class="nav-link" href="/all-students">all students</a>
             </li>
 
