--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -9,7 +9,7 @@
 }
     </style>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" style="margin-right: -5px; margin-left: 0px; padding-right: 0px;padding-top: 10.5px; font-size: 18px; color: rgb(0, 0, 0);" href="/">Hello Sergonne Lou/</a>
+        <a class="navbar-brand" style="margin-right: -5px; margin-left: 0px; padding-right: 0px;padding-top: 6px; font-size: 18px; color: rgb(0, 0, 0);" href="/">Hello Sergonne Lou/</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,9 +56,9 @@
 
 
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <form class="form-inline my-2 my-lg-0" action="/pages/search.php">
+            <input class="form-control mr-sm-2" name="search" type="search" id="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" method="post" id="form" type="submit">Search</button>
           </form>
           
           <li class="nav-item dropdown" style="list-style:none; color: rgba(0,0,0,.5);">
