--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="navbar"></div>
-    <script src="./scripts/navbar.js"></script>
+    <script src="https://unkreative.github.io/calendar/scripts/navbar.js"></script>
     
 </body>
 </html>
