--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -33,7 +33,7 @@
             font-size: 16px;
             "
             >
-              <a class="nav-link" href="/pages/all_students.php">students</a>
+              <a class="nav-link" href="/pages/all_students.html">students</a>
             </li>
 
 
@@ -51,7 +51,7 @@
             display:flex;
             justify-content: center;
             font-size: 16px;">
-              <a class="nav-link" href="/pages/all_students.php">all students</a>
+              <a class="nav-link" href="/pages/all_students.html">all students</a>
             </li>
 
 
