--- a/pages/settings.html
+++ b/pages/settings.html
@@ -260,7 +260,7 @@
             font-size: 16px;
             "
             >
-              <a class="nav-link" href="/pages/all_students.php">students</a>
+              <a class="nav-link" href="/pages/all_students.html">students</a>
             </li>
 
 
@@ -278,7 +278,7 @@
             display:flex;
             justify-content: center;
             font-size: 16px;">
-              <a class="nav-link" href="/pages/all_students.php">all students</a>
+              <a class="nav-link" href="/pages/all_students.html">all students</a>
             </li>
 
 
